# astruct-blog-examples

./: LICENSE  README.md
.github/workflows/: embed-code-snippets.yml
000-about-us/: README.md
001-every-project-is-a-package/: README.md
001-every-project-is-a-package/manifest-examples/: Cargo.toml  Pipfile  flit.pyproject.toml  hatch.pyproject.toml  package.json  poetry.pyproject.toml  pyflow.pyproject.toml  pyproject.toml  requirements.txt
001-poetic-python-package-management/: README.md
001-poetic-python-package-management/.github/workflows/: embed-code-snippets.yml
001-poetic-python-package-management/pipapp/: Dockerfile
001-poetic-python-package-management/pipapp/requirements/: requirements.dev.txt  requirements.txt
001-poetic-python-package-management/pipapp/src/: main.py
001-poetic-python-package-management/poetryapp/: Dockerfile
001-poetic-python-package-management/poetryapp/requirements/: pyproject.toml
001-poetic-python-package-management/poetryapp/src/: main.py
001-poetic-python-package-management/using_pip/: Dockerfile
001-poetic-python-package-management/using_pip/requirements/: requirements.txt
001-poetic-python-package-management/using_poetry/: .dockerignore  Dockerfile  docker-compose.yml
002-poetic-python-package-management/: README.md
002-poetic-python-package-management/pipapp/: Dockerfile
002-poetic-python-package-management/poetryapp/: Dockerfile  docker-compose.yml
002-poetic-python-package-management/poetryapp/requirements/: pyproject.toml  requirements.txt
005-multi-stage-build/poetryapp/: wardrobe.sql
(+4 files in other folders)
